added portfolio items, removed show all, test case

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </a>
             </div>
             <div class="project-tile">
-                <a href="https://codepen.io/vawilliams/full/MWYVNLq">
-                    <img src="./images/Survey-Form.png" alt="">
+                <a href="https://vawilliams.github.io/Outdoor-Adventures/">
+                    <img src="./images/Outdoor-Adventures.png" alt="">
                     <div>
-                        <p>Survey Form</p>
+                        <p>Outdoor Adventures</p>
                     </div>
                 </a>
             </div>
@@ -52,11 +52,27 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="project-tile">
+                <a href="https://vawilliams.github.io/Curriculum-Vitae/">
+                    <img src="./images/Curriculum-Vitae.png" alt="">
+                    <div>
+                        <p>Curriculum Vitae</p>
+                    </div>
+                </a>
+            </div>
+            <div class="project-tile">
+                <a href="https://vawilliams.github.io/Code4CT/">
+                    <img src="./images/Code-Cape-Town.png" alt="">
+                    <div>
+                        <p>Code 4 Cape Town</p>
+                    </div>
+                </a>
+            </div>
+            <!-- <div>
                 <button id="profile-button"><a href="https://codepen.io/vawilliams" id="profile-link" target="_blank">
                     Show All <span class="arrow-greater">&gt;</span>
                 </a></button>
-            </div>
+            </div> -->
         </section>
 
         <section id="contact">
@@ -78,7 +94,7 @@
 
         
         <script src="scripts/main.js"></script>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
     </body>
 
