--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name='title' property='og:title' content='Vicario Williams - Web Developer'/>
+        <meta name='type' property="og:type" content="Website">
         <meta name='image' property='og:image' content='images/background/Landscape-Mountain.jpg'/>
         <meta name='description' property='og:description' content='Frontend web developer, passionate about helping businesses develop an online presence.'/>
         <meta name='url' property='og:url' content='//vawilliams.github.io/Personal-Portfolio-Webpage/'/>
+        <meta name="keywords" content="web developer, Vicario Williams, angular developer, front end web developer, software engineer">
+        <meta name="author" content="Vicario Williams">
         <title>Personal Portfolio Website</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.min.js"></script>
         <link rel="stylesheet" href="styles/main.css">
