--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name='title' property='og:title' content='Vicario Williams - Web Developer'/>
         <meta name='type' property="og:type" content="Website">
-        <meta name='image' property='og:image' content='images/background/Landscape-Mountain.jpg'/>
+        <meta name='image' property='og:image' content='./images/background/Landscape-Mountain.jpg'/>
         <meta name='description' property='og:description' content='Frontend web developer, passionate about helping businesses develop an online presence.'/>
         <meta name='url' property='og:url' content='//vawilliams.github.io/Personal-Portfolio-Webpage/'/>
         <meta name="keywords" content="web developer, Vicario Williams, angular developer, front end web developer, software engineer">
