--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name='title' property='og:title' content='Vicario Williams - Web Developer'/>
         <meta name='type' property="og:type" content="Website">
         <meta name='image' property='og:image' content='images/background/Landscape-Mountain.jpg'/>
-        <meta name='description' property='og:description' content='Frontend web developer, passionate about helping businesses develop an online presence.'/>
+        <meta name='description' property='og:description' content="Frontend web developer with over two years of professional experience, passionate about helping businesses develop an online presence. Everyone starts from somewhere and learns more from their journies than their goals - that's what I believe. A relentless team dynamic is where I thrive most, and I live for the challenge!"/>
         <meta name='url' property='og:url' content='//vawilliams.github.io/Personal-Portfolio-Webpage/'/>
         <meta name="keywords" content="web developer, Vicario Williams, angular developer, front end web developer, software engineer">
         <meta name="author" content="Vicario Williams">
