meta for twitter and facebook

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- HTML Meta Tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name='title' property='og:title' content='Vicario Williams - Web Developer'/>
-        <meta name='type' property="og:type" content="Website">
-        <meta name='image' property='og:image' content='images/background/Landscape-Mountain.jpg'/>
-        <meta name='description' property='og:description' content="Frontend web developer with over two years of professional experience, passionate about helping businesses develop an online presence. Everyone starts from somewhere and learns more from their journies than their goals - that's what I believe. A relentless team dynamic is where I thrive most, and I live for the challenge!"/>
-        <meta name='url' property='og:url' content='//vawilliams.github.io/Personal-Portfolio-Webpage/'/>
-        <meta name="keywords" content="web developer, Vicario Williams, angular developer, front end web developer, software engineer">
-        <meta name="author" content="Vicario Williams">
+        <meta name="description" content="Frontend web developer with over two years of professional experience, passionate about helping businesses develop an online presence.">
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://vawilliams.github.io/Personal-Portfolio-Webpage/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Vicario Williams - Web Developer">
+        <meta property="og:description" content="Frontend web developer with over two years of professional experience, passionate about helping businesses develop an online presence.">
+        <meta property="og:image" content="https://vawilliams.github.io/Personal-Portfolio-Webpage/images/background/Landscape-Mountain.jpg">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="vawilliams.github.io">
+        <meta property="twitter:url" content="https://vawilliams.github.io/Personal-Portfolio-Webpage/">
+        <meta name="twitter:title" content="Vicario Williams - Web Developer">
+        <meta name="twitter:description" content="Frontend web developer with over two years of professional experience, passionate about helping businesses develop an online presence.">
+        <meta name="twitter:image" content="https://vawilliams.github.io/Personal-Portfolio-Webpage/images/background/Landscape-Mountain.jpg">
+
         <title>Personal Portfolio Website</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.min.js"></script>
         <link rel="stylesheet" href="styles/main.css">
